# openslide-profiling

./: .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
cmake/: FindOpenSlide.cmake
nix/: default.nix  devShell.nix  overlay.nix
src/: test.c
